--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <table class="cs-table table table-striped">
+      <table *ngIf="cars.length > 0; else noCarsInfo" class="cs-table table table-striped">
         <thead>
         <tr>
           <th>car</th>
@@ -14,17 +14,23 @@
         </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let car of cars; let i = index">
-            <td> {{ car.model }}</td>
-            <td> {{ car.plate }}</td>
-            <td> {{ car.deliveryDate }}</td>
-            <td> {{ car.deadline }}</td>
-            <td> {{ car.client.firstName }} {{ car.client.surname }}</td>
-            <td> {{ car.cost }} </td>
-            <td> ACTION PLACEHOLDER </td>
-          </tr>
+        <tr *ngFor="let car of cars; let i = index">
+          <td [ngClass]="{'row-error': car.isFullyDamaged}"> {{ car.model }}</td>
+          <td> {{ car.plate }}</td>
+          <td> {{ car.deliveryDate }}</td>
+          <td> {{ car.deadline }}</td>
+          <td> {{ car.client.firstName }} {{ car.client.surname }}</td>
+          <td> {{ car.cost }} </td>
+          <td> ACTION PLACEHOLDER</td>
+        </tr>
         </tbody>
       </table>
+
+      <ng-template #noCarsInfo>
+        <div class="no-cars-info">
+          <p>Currently no cars in service</p>
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
