--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -35,7 +35,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <button (click)="showGross()" class="btn btn-primary btn-sm float-left">
+      <button (click)="showGross()" class="btn btn-primary btn-sm float-right">
         SHOW GROSS
       </button>
     </div>
