--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -1,3 +1,13 @@
+<cs-header>
+  <p levels>cars</p>
+
+  <div content>
+    <p>Some text</p>
+  </div>
+
+<!--  <span footer>Some footer in text</span>-->
+</cs-header>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
