--- a/src/app/shared-module/header/header.component.html
+++ b/src/app/shared-module/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header">
+  <div class="levels">
+    <ng-content select="[levels]"></ng-content>
+  </div>
+
+  <div class="other-content">
+    <ng-content select="[content]"></ng-content>
+  </div>
+
+<!--  <div class="footer">-->
+<!--    <ng-content select="[footer]"></ng-content>-->
+<!--  </div>-->
+</div>
