--- a/src/app/pokemon/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.scss
@@ -9,3 +9,10 @@
   padding: 20px;
   background: $white;
 }
+
+.total-pokemon {
+  background: $dark-gray;
+  padding: 15px;
+  text-transform: capitalize;
+  color: $white;
+}
