--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -32,4 +32,18 @@
 
     </div>
   </div>
+<!--  <div class="row">-->
+<!--    <div class="col-sm-12" total-weight>-->
+<!--      <div class="total-weight">-->
+<!--        <p class="text-right">MY ALL POKEMON HAVE  : {{ totalWeight }}  WEIGHT</p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="total-pokemon">
+        <p class="text-right">i caught : {{ totalPokemon }} poke's</p>
+      </div>
+    </div>
+  </div>
 </div>
